istio/6-mssql-deploy-2-0.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mssql-deployment-2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
      version: "v2.0"
  template:
    metadata:
      labels:
        app: mssql
        version: "v2.0"
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql
        image: microsoft/mssql-server-linux
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
          requests:
            cpu: "0.5"
        ports:
        - containerPort: 1433
