istio/4-mssql-svc-deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mssql-deployment-1-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
      version: "v1.0"
  template:
    metadata:
      labels:
        app: mssql
        version: "v1.0"
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql
        image: microsoft/mssql-server-linux
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
          requests:
            cpu: "0.5"
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  labels: 
    app: mssql
spec:
  selector:
    app: mssql
    # version: "v1.0"
  ports:
    - protocol: TCP
      port: 1433
  #     targetPort: 1433
  #     nodePort: 30200
  # type: NodePort
