istio/2-app-virtualservice.yaml
# mvc-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mvc-app
spec:
  hosts:
  - "*"
  gateways:
  - mvc-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mvc-app.products.svc.cluster.local
        port:
          number: 80
