istio/5-mssql-virtualservice-destinationrule.yaml
# mvc-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mssql-virtualservice
spec:
  hosts:
  - mssql-service.products.svc.cluster.local
  http:
  - match:
    - sourceLabels:
        app: mvc-app
        version: "1.0"
    route:
    - destination:
        host: mssql-service.products.svc.cluster.local
        subset: v2-0
        port:
          number: 1433 #30200
---
# voting-app-destinationrule-1.0.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mssql-db-destinationrule
spec:
  host: mssql-service.products.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1-0
    labels:
      app: mssql
      version: "v1.0"
  - name: v2-0
    labels:
      app: mssql
      version: "v2.0"
