istio/mvc-app-gateway.yaml
# mvc-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mvc-app
spec:
  hosts:
  - "*"
  gateways:
  - mvc-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mvc-app.products.svc.cluster.local
        port:
          number: 80
---
# voting-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mvc-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
